# qt-skf-github

./: .clang-format  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEPENDENCIES.md  Makefile  README.md  api-sketch.md  constitution.md  gui-pending-tasks.md  plan.md  spec.md  tasks.md  test_builtin_module.sh
.github/workflows/: build.yml
docs/plans/: 2026-02-09-ui-redesign.md
docs/specs/: 2026-02-09-update-summary.md  gui-comparison.md
resources/: Info.plist.in  app.rc
resources/icons/: app.icns
resources/lib/mac/: libgm3000.1.0_arm64.dylib  libgm3000.1.0_x86.dylib  libgm3000.dylib
scripts/: generate_icns.sh  generate_icons.sh  inspect_mac_mach_arch.sh  package_mac.sh  package_mac_amd.sh  package_mac_arm.sh  package_win.ps1  select_mac_skf_lib.sh
scripts/installer/: wekey-skf.iss
src/: CMakeLists.txt
src/api/: ApiRouter.cpp  ApiRouter.h  CMakeLists.txt  HttpServer.cpp  HttpServer.h
src/api/dto/: HttpTypes.cpp  HttpTypes.h  Request.cpp  Request.h  Response.cpp  Response.h
src/api/handlers/: BusinessHandlers.cpp  BusinessHandlers.h  PublicHandlers.cpp  PublicHandlers.h
src/app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Error.cpp  Error.h  Result.h
src/config/: CMakeLists.txt  Config.cpp  Config.h  Defaults.h
src/core/: CMakeLists.txt
src/core/application/: AppService.cpp  AppService.h  CMakeLists.txt
src/core/container/: CMakeLists.txt  ContainerService.cpp  ContainerService.h
src/core/crypto/: CMakeLists.txt  CertService.cpp  CertService.h
src/core/device/: CMakeLists.txt  DeviceService.cpp  DeviceService.h
src/core/file/: CMakeLists.txt  FileService.cpp  FileService.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SystemTray.cpp  SystemTray.h  UiHelper.h
src/gui/dialogs/: AddModuleDialog.cpp  AddModuleDialog.h  CertDetailDialog.cpp  CertDetailDialog.h  CreateAppDialog.cpp  CreateAppDialog.h  CreateFileDialog.cpp  CreateFileDialog.h  CsrDialog.cpp  CsrDialog.h  EncDecTestDialog.cpp  EncDecTestDialog.h  ImportCertDialog.cpp  ImportCertDialog.h  LoginDialog.cpp  LoginDialog.h  MessageBox.cpp  MessageBox.h  SignDialog.cpp  SignDialog.h
src/gui/pages/: ConfigPage.cpp  ConfigPage.h  DevicePage.cpp  DevicePage.h  LogPage.cpp  LogPage.h  ModulePage.cpp  ModulePage.h
src/gui/views/: AppDetailView.cpp  AppDetailView.h  AppListView.cpp  AppListView.h
src/log/: CMakeLists.txt  LogModel.cpp  LogModel.h  Logger.cpp  Logger.h
src/plugin/: CMakeLists.txt  PluginManager.cpp  PluginManager.h
src/plugin/interface/: CMakeLists.txt  IDriverPlugin.h  PluginTypes.h
src/plugin/skf/: CMakeLists.txt  SkfApi.h  SkfLibrary.cpp  SkfLibrary.h  SkfPlugin.cpp  SkfPlugin.h  SkfTypes.h  skf.json
tests/: CMakeLists.txt
tests/core/crypto/: CertServiceTest.cpp
tests/gui/dialogs/: AddModuleDialogTest.cpp  CertDetailDialogTest.cpp  EncDecTestDialogTest.cpp
tests/gui/views/: AppDetailViewTest.cpp
tests/package/: mac_mach_arch_inspector_test.sh  mac_skf_lib_selector_test.sh
tests/plugin/skf/: SkfPluginTest.cpp
tests/support/: FakeDriverPlugin.h
tools/windows/: README.md
